library versions set

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-numpy
-pandas
-tqdm
-scikit-learn
+numpy==1.26.4
+pandas==2.2.2
+tqdm==4.66.4
+scikit-learn==1.4.2
 iterative-stratification==0.1.7
-torch
-transformers
-tokenizers
-joblib
-ptflops
+torch==2.3.1
+transformers==4.37.2
+tokenizers==0.15.1
+ptflops==0.7.3
